plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '1.0.13'
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
}

base {
    archivesName = mod_name
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neoforge_version

    mods {
        appflux {
            sourceSet sourceSets.main
        }
    }

    runs {
        client {
            client()
        }

        server {
            server()
        }

        gametestWorld {
            client()
            programArguments.addAll("--username", "AppFluxDev", "--quickPlaySingleplayer", "GametestWorld")
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        gametest {
            type = "gameTestServer"
            gameDirectory = project.file("build/gametest")
        }

    }

}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

repositories {
    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
        content {
            includeGroup "dev.emi"
        }
    }
    maven {
        name 'cursemaven'
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "Modmaven"
        url = uri("https://modmaven.dev/")
    }
    mavenCentral()
}

dependencies {
    implementation "io.github.glodblock:Glodium:1.21-2.2-neoforge"
    implementation "org.appliedenergistics:appliedenergistics2:19.2.2-beta"
    implementation "org.appliedenergistics:guideme:2.5.1"
    compileOnly "mekanism:Mekanism:1.21.1-10.7.9.72"
    compileOnly "curse.maven:modern-industrialization-405388:6389065"
    compileOnly "curse.maven:grandpower-980156:5432440"
    compileOnly "dev.emi:emi-neoforge:1.1.10+1.21"
    compileOnly "curse.maven:jade-324717:5427817"
    compileOnly "curse.maven:wireless-chargers-510656:5551798"
    compileOnly "curse.maven:flux-networks-248020:6089446"
    // runtime test
    runtimeOnly "dev.emi:emi-neoforge:1.1.10+1.21"
    runtimeOnly "curse.maven:jade-324717:5427817"
    runtimeOnly "mekanism:Mekanism:1.21.1-10.7.9.72"
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
            neo_version         : neoforge_version, neo_version_range: neoforge_version_range,
            loader_version_range: loader_version_range,
            mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors         : mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
